# config-2014-naga-gui

./: Cargo.toml  README.md  justfile
.github/workflows/: build.yml
src/: app.rs  main.rs  state.rs  tray.rs
src/tabs/: about.rs  key_mappings.rs  mod.rs  settings.rs
