[package]
name = "config-2014-naga-gui"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "config-2014-naga-gui"
path = "src/main.rs"

# Restrict to Linux targets only
[target.'cfg(target_os = "linux")']

[package.metadata]
platforms = ["linux"]

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = ["libc.so*", "libdl.so*", "libpthread.so*"]

[package.metadata.appimage.desktop]
name = "Config 2014 Naga GUI"
comment = "GUI for config-2014-naga key remapping"
icon = "icon"
categories = "Utility;System;"
keywords = "razer;naga;mouse;remap;"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"
ksni = "0.2" # System tray for Linux
dirs = "5.0" # Directory paths
rfd = "0.1" # File dialogs 
toml = "0.9" # toml parser
serde = { version = "1.0", features = ["derive"] }
# lib-config_2014_naga 
config-2014-naga = "0.3.0"
